Corrigido links da página

--- a/pages/italiana.html
+++ b/pages/italiana.html
@@ -22,13 +22,13 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#culinarias">Culinárias</a>
+                    <a class="nav-link" href="/index.html#culinarias">Culinárias</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="#carouselExampleCaptions" aria-disabled="true">Receitas Tradicionais</a>
+                    <a class="nav-link " href="/index.html#carouselExampleCaptions" aria-disabled="true">Receitas Tradicionais</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link " href="#contato" aria-disabled="true">Contato</a>
@@ -62,8 +62,13 @@
           </div>
       </div>
 
-    
-
+    <footer>
+        <div class="footer" id="contato">
+          <h5>Sabores do Mundo</h5>
+          <p> Todos os direitos reservados</p>
+          <p>contato@contato.com.br</p>
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>    
