--- a/pages/japonesa.html
+++ b/pages/japonesa.html
@@ -13,7 +13,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="./../index.html">
                 <img src="https://logopond.com/logos/bb5e54284cec40cf6fdad1a90b845bf0.png">
             </a>
             
