--- a/pages/francesa.html
+++ b/pages/francesa.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./../style.css">
+    <link rel="stylesheet" href="/css/italiana.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <title>Culinária Francesa</title>
 </head>
@@ -13,7 +14,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./../index.html">
+            <a class="navbar-brand" href="/index.html">
                 <img src="https://logopond.com/logos/bb5e54284cec40cf6fdad1a90b845bf0.png">
             </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,19 +23,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="index.html" href="./../index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="/index.html#culinarias">Culinárias</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#" aria-disabled="true">Disabled</a>
+                <a class="nav-link " href="/index.html#carouselExampleCaptions" aria-disabled="true">Receitas Tradicionais</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#" aria-disabled="true">Disabled</a>
+                <a class="nav-link " href="#contato" aria-disabled="true">Contato</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#" aria-disabled="true">Disabled</a>
+                <a class="nav-link " href="https://www.tudogostoso.com.br/" target="_blank"aria-disabled="true">Mais Receitas</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -43,7 +44,7 @@
           </div>
         </div>
     </nav>
-  </header>
+</header>
   <main class="francesa">
       <div class="containerFR" id="pag-2">
         <div class="p-4 p-md-5 mb-4 text-red rounded" id="banner">
@@ -141,5 +142,15 @@
     </div>
 
   </main>
+
+    <footer>
+      <div class="footer" id="contato">
+        <h5>Sabores do Mundo</h5>
+        <p> Todos os direitos reservados</p>
+        <p>contato@contato.com.br</p>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>    
+
 </body>
 </html>
