--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="card-body d-flex flex-column">
                   <h5 class="card-title">Culinária Italiana</h5>
                   <p class="card-text">A culinária italiana apresenta influências da cozinha etrusca, da antiga Grécia, da antiga Roma, Bizantina, Hebraica e Árabe. E sofreu importantes mudanças com a descoberta do Novo Mundo (América), como a introdução de alimentos como batata, tomate, pimentão e milho.</p>
-                  <a href="/pages/italiana.html" class="btn btn-primary button-custom mt-auto">Saiba Mais</a>
+                  <a href="./pages/italiana.html" class="btn btn-primary button-custom mt-auto">Saiba Mais</a>
                 </div>
               </div>
           </div>
@@ -108,7 +108,7 @@
                     <div class="card-body d-flex flex-column">
                       <h5 class="card-title">Culinária Portuguesa</h5>
                       <p class="card-text">A culinária portuguesa é muito característica, mostra influências atlânticas e mediterrânicas. Tem muito variedade regional, apesar de se tratar de um país pequeno, porém a base da gastronomia está nos três itens: pão, vinho e azeite. Além disso, vemos um grande consumo de peixe, variadas sopas, frutos frescos.</p>
-                      <a href="/pages/portuguesa.html" class="btn btn-primary button-custom mt-auto">Saiba Mais</a>
+                      <a href="./pages/portuguesa.html" class="btn btn-primary button-custom mt-auto">Saiba Mais</a>
                     </div>
                   </div>
             </div>
@@ -118,7 +118,7 @@
                     <div class="card-body d-flex flex-column">
                       <h5 class="card-title">Culinária Alemã</h5>
                       <p class="card-text">A gastronomia alemã vai muito além do chucrute, das "cucas" (da palavra alemã Kuchen, bolo) e das salsichas acompanhadas pelos mais diferentes tipos de mostarda. Cada região tem suas próprias especialidades, preparadas a partir dos recursos disponíveis.</p>
-                      <a href="#" class="btn btn-primary button-custom mt-auto">Saiba Mais</a>
+                      <a href="./pages/alema.html" class="btn btn-primary button-custom mt-auto">Saiba Mais</a>
                     </div>
                 </div>
             </div>
