--- a/pages/alema.html
+++ b/pages/alema.html
@@ -25,10 +25,10 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#culinarias">Culinárias</a>
+                    <a class="nav-link" href="../index.html">Culinárias</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="#carouselExampleCaptions" aria-disabled="true">Receitas Tradicionais</a>
+                    <a class="nav-link " href="../index.html" aria-disabled="true">Receitas Tradicionais</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link " href="#contato" aria-disabled="true">Contato</a>
