--- a/pages/portuguesa.html
+++ b/pages/portuguesa.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
+    <link href="../css/portuguesa.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <title>Sabores do Mundo - Portuguesa</title>
 </head>
@@ -44,12 +45,9 @@
         </nav>
 
     </header>
-        
-          <div>
-
-            <img class="banner" src="https://duyt4h9nfnj50.cloudfront.net/resized/0cb0fbbd09e9e7cbada173b32604d21f-w2880-95.jpg">
-                   
-        </div>
+    <div>
+       <img class="banner" src="https://duyt4h9nfnj50.cloudfront.net/resized/0cb0fbbd09e9e7cbada173b32604d21f-w2880-95.jpg">
+    </div>
 
         <div class="artigo">
 
