--- a/pages/alema.html
+++ b/pages/alema.html
@@ -25,7 +25,7 @@
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../index.html#culinarias"">Culinárias</a>
+                    <a class="nav-link" href="../index.html#culinarias">Culinárias</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link " href="../index.html#carouselExampleCaptions" aria-disabled="true">Receitas Tradicionais</a>
@@ -38,8 +38,8 @@
                   </li>
                 </ul>
                 <form class="d-flex">
-                  <button class="btn btn-outline-danger" type="submit">Login</button>
-                </form>
+                  <a href="../pages/login.html" class="btn btn-outline-danger">Login</a>
+              </form>
               </div>
             </div>
         </nav>
