ajuste pag brasileira e japonesa

--- a/pages/brasileira.html
+++ b/pages/brasileira.html
@@ -52,7 +52,7 @@
                   </li>
                 </ul>
                 <form class="d-flex">
-                  <button class="btn btn-outline-danger" type="submit">Login</button>
+                  <a href="login.html" class="btn btn-outline-danger">Login</a>
                 </form>
               </div>
             </div>
