ajuste pag italiana

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <p>
                     O prazer proporcionado pela comida é um dos fatores mais importantes da vida depois da alimentação de sobrevivência. A gastronomia nasceu desse prazer e constituiu-se como a arte de cozinhar e associar os alimentos para, deles, retirar o máximo benefício. Cultura muito antiga, a gastronomia esteve na origem de grandes transformações sociais e políticas. 
                 </p>
-                <button type="button" class="btn btn-primary" href="#cards">Saiba Mais</button>
-            </div>     
+                <a class="btn btn-primary" href="#culinarias">Saiba Mais</a>
+            </div>
         </div>
       </div>
     </div>
