--- a/pages/francesa.html
+++ b/pages/francesa.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./../style.css">
-    <link rel="stylesheet" href="/css/italiana.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
     <title>Culinária Francesa</title>
 </head>
-
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -45,104 +43,69 @@
         </div>
     </nav>
 </header>
+
   <main class="francesa">
-      <div class="containerFR" id="pag-2">
-        <div class="p-4 p-md-5 mb-4 text-red rounded" id="banner">
-            <div class="col-md-6 px-0 justify-content-center ">
-                <h1 class="display-4 fst-italic">Sabores da França</h1>
-                <p class="lead my-3">A gastronomia francesa é conhecida em todo o mundo pela sua qualidade e diversidade. </p>
-            </div>
-        </div>
-        <div class="row mb-2">
-            <div class="col-md-6">
-                <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-primary">Prato exótico</strong>
-                        <h3 class="mb-0">Escargot</h3>
-                        <div class="mb-1 text-muted">Out 05</div>
-                        <p class="card-text mb-auto">Um prato exótico típico da gastronomia francesa, escargot é a palavra francesa para caracol. O prato é composto por caracóis terrestres cozidos. Muitas vezes é servido como um hors d'oeuvre.</p>
-                        <a href="https://pt.wikihow.com/Preparar-Escargot" target="_blank" onclick=>Veja mais!</a>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <img class="thumbnail" alt="Escargot" src="./../images/Escargot.jpg">
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-success">Harmonização</strong>
-                        <h3 class="mb-0">Vinhos</h3>
-                        <div class="mb-1 text-muted">Out 05</div>
-                            <p class="mb-auto">O vinho está profundamente inserido no cotidiano dos franceses. A produção de vinho é um trunfo de seu povo, motivo de orgulho e prestigio internacional. Seus vinhedos são a expressão máxima de qualidade, onde o terroir é gritante e fundamental.</p>
-                            <a href="https://www.momondo.com.br/discover/regioes-vinhos-franceses" target="_blank" onclick>Veja mais!</a>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <img class="thumbnail" alt="Vinhos" src="./../images/VinhosFranceses.jpg"/>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-secondary">Prato típico</strong>
-                        <h3 class="mb-0">Ratatouille</h3>
-                        <div class="mb-1 text-muted">Out 05</div>
-                        <p class="mb-auto">É uma clássica receita francesa provençal de legumes cozidos do século XVIII, podendo ser servida quente ou fria, sozinha ou como acompanhamento.</p>
-                        <a href="https://claudia.abril.com.br/receitas/ratatouille-2/" target="_blank" onclick>Veja mais!</a>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <img class="thumbnail" alt="Ratatouille" src="./../images/Ratatouille.jpg"/>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-success">Tradição na produção de queijos</strong>
-                        <h3 class="mb-0">Queijos</h3>
-                        <div class="mb-1 text-muted">Out 05</div>
-                        <p class="mb-auto">O queijo – junto com o vinho e a moda – é um dos produtos pelo qual a França é mundialmente conhecida. O país é grande produtor e consumidor de queijos (cerca de 27 kilos por ano por habitante) e a variedade é enorme e difícil de ser mensurada (alguns dizem 1.200 tipos diferentes).</p>
-                        <a href="https://guiadoestrangeiro.com/os-300-queijos-franceses/" target="_blank" onclick>Veja mais!</a>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <img class="thumbnail" alt="Queijos" src="./../images/Queijos.jpg"/>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-warning">Patisserie</strong>
-                        <h3 class="mb-0">Macarons</h3>
-                        <div class="mb-1 text-muted">Out 05</div>
-                        <p class="mb-auto">Macaron ou macaroon, é um pequeno bolo granulado e comumente produzido sob forma arredondada de 3 ou 5 cm de diâmetro, especialidade de Lorraine, na França. Não deve ser confundido com o massepain de Saint-Léonard-de-Noblat, em Limousin.</p>
-                        <a href="https://www.confeiteiradesucesso.com/macaron-receita-simples-aprenda-como-fazer/" target="_blank" onclick>Veja mais!</a>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <img class="thumbnail" alt="Macarons" src="./../images/Macarons.jpg"/>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-info">Prato tradicional</strong>
-                        <h3 class="mb-0">Magret de Pato</h3>
-                        <div class="mb-1 text-muted">Out 05</div>
-                        <p class="mb-auto">"Magret" é o peito do pato que é tradicionalmente engordado para produzir o foie gras e deve ser preparado de forma bastante peculiar. Tem que ser grelhado primeiro no lado da pele para que a própria gordura penetre na carne e deve ser servido mal passado e com a pele bem crocante.</p>
-                        <a href="https://blog.grandcru.com.br/receita-magret-pato-culinaria-francesa/" target="_blank" onclick>Veja mais!</a>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <img class="thumbnail" alt="Magret de pato" src="./../images/Pato.jpg"/>
-                    </div>
-                </div>
-            </div>
+    <div class="p-4 p-md-5 mb-4 text-black rounded" id="bannerFR">
+        <div class="col-md-6 px-0 justify-content-center ">
+            <h1 class="display-4 fst-italic">Sabores da França</h1>
+            <p class="lead my-3">A gastronomia francesa é conhecida em todo o mundo pela sua qualidade e diversidade.</p>
         </div>
     </div>
-
+    
+    <div class="card-group">
+        <div class="card">
+          <img src="./../images/Escargot.jpg" class="card-img-top" alt="Escargot">
+          <div class="card-body">
+            <h5 class="card-title">Escargot</h5>
+            <p class="card-text">Um prato exótico típico da gastronomia francesa, escargot é a palavra francesa para caracol. O prato é composto por caracóis terrestres cozidos. Muitas vezes é servido como um hors d'oeuvre.</p>
+            <a href="https://pt.wikihow.com/Preparar-Escargot" target="_blank" onclick=>Veja mais!</a>
+        </div>
+        </div>
+        <div class="card">
+          <img src="./../images/VinhosFranceses.jpg" class="card-img-top" alt="Vinhos">
+          <div class="card-body">
+            <h5 class="card-title">Vinhos</h5>
+            <p class="card-text">O vinho está profundamente inserido no cotidiano dos franceses. A produção de vinho é um trunfo de seu povo, motivo de orgulho e prestigio internacional. Seus vinhedos são a expressão máxima de qualidade, onde o terroir é gritante e fundamental.</p>
+            <a href="https://www.momondo.com.br/discover/regioes-vinhos-franceses" target="_blank" onclick>Veja mais!</a>
+        </div>
+        </div>
+        <div class="card">
+          <img src="./../images/Ratatouille.jpg" class="card-img-top" alt="Ratatouille">
+          <div class="card-body">
+            <h5 class="card-title">Ratatouille</h5>
+            <p class="card-text">É uma clássica receita francesa provençal de legumes cozidos do século XVIII, podendo ser servida quente ou fria, sozinha ou como acompanhamento.</p>
+            <a href="https://claudia.abril.com.br/receitas/ratatouille-2/" target="_blank" onclick>Veja mais!</a>
+        </div>
+        </div>
+      </div>
+      <div class="card-group">
+        <div class="card">
+          <img src="./../images/Queijos.jpg" class="card-img-top" alt="Queijos">
+          <div class="card-body">
+            <h5 class="card-title">Queijos</h5>
+            <p class="card-text">O queijo – junto com o vinho e a moda – é um dos produtos pelo qual a França é mundialmente conhecida. O país é grande produtor e consumidor de queijos (cerca de 27 kilos por ano por habitante) e a variedade é enorme e difícil de ser mensurada (alguns dizem 1.200 tipos diferentes).</p>
+            <a href="https://guiadoestrangeiro.com/os-300-queijos-franceses/" target="_blank" onclick>Veja mais!</a>
+        </div>
+        </div>
+        <div class="card">
+          <img src="./../images/Macarons.jpg" class="card-img-top" alt="Macarons">
+          <div class="card-body">
+            <h5 class="card-title">Macaron</h5>
+            <p class="card-text">Macaron ou macaroon, é um pequeno bolo granulado e comumente produzido sob forma arredondada de 3 ou 5 cm de diâmetro, especialidade de Lorraine, na França. Não deve ser confundido com o massepain de Saint-Léonard-de-Noblat, em Limousin.</p>
+            <a href="https://www.confeiteiradesucesso.com/macaron-receita-simples-aprenda-como-fazer/" target="_blank" onclick>Veja mais!</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./../images/Pato.jpg" class="card-img-top" alt="Magret du canard">
+          <div class="card-body">
+            <h5 class="card-title">Magret du Canard</h5>
+            <p class="card-text">"Magret du Canard" é o peito do pato que é tradicionalmente engordado para produzir o foie gras e deve ser preparado de forma bastante peculiar. Tem que ser grelhado primeiro no lado da pele para que a própria gordura penetre na carne e deve ser servido mal passado e com a pele bem crocante.</p>
+            <a href="https://blog.grandcru.com.br/receita-magret-pato-culinaria-francesa/" target="_blank" onclick>Veja mais!</a>
+        </div>
+        </div>
+      </div>
+        
   </main>
-
     <footer>
       <div class="footer" id="contato">
         <h5>Sabores do Mundo</h5>
@@ -150,7 +113,6 @@
         <p>contato@contato.com.br</p>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>    
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
 </body>
 </html>
