--- a/pages/italiana.html
+++ b/pages/italiana.html
@@ -10,40 +10,40 @@
     <title>Sabores do Mundo|Italiana</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">
-                    <img src="https://logopond.com/logos/bb5e54284cec40cf6fdad1a90b845bf0.png">
-                </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/index.html#culinarias">Culinárias</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="/index.html#carouselExampleCaptions" aria-disabled="true">Receitas Tradicionais</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="#contato" aria-disabled="true">Contato</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="https://www.tudogostoso.com.br/" target="_blank"aria-disabled="true">Mais Receitas</a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <button class="btn btn-outline-danger" type="submit">Login</button>
-                </form>
-              </div>
-            </div>
-        </nav>
-    </header>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">
+                <img src="https://logopond.com/logos/bb5e54284cec40cf6fdad1a90b845bf0.png">
+            </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html#culinarias">Culinárias</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="../index.html#carouselExampleCaptions" aria-disabled="true">Receitas Tradicionais</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="#contato" aria-disabled="true">Contato</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="https://www.tudogostoso.com.br/" target="_blank"aria-disabled="true">Mais Receitas</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+                <a href="login.html" class="btn btn-outline-danger">Login</a>
+            </form>
+          </div>
+        </div>
+      </nav>
+  </header>
     <div class="container">
         <div class="row ">
           <div class="col col-sm-12 col-md-12 col-lg-12">
