--- a/pages/francesa.html
+++ b/pages/francesa.html
@@ -12,7 +12,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="../index.html">
                 <img src="https://logopond.com/logos/bb5e54284cec40cf6fdad1a90b845bf0.png">
             </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,13 +21,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/index.html#culinarias">Culinárias</a>
+                <a class="nav-link" href="../index.html#culinarias">Culinárias</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="/index.html#carouselExampleCaptions" aria-disabled="true">Receitas Tradicionais</a>
+                <a class="nav-link " href="../index.html#carouselExampleCaptions" aria-disabled="true">Receitas Tradicionais</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="#contato" aria-disabled="true">Contato</a>
@@ -37,7 +37,7 @@
               </li>
             </ul>
             <form class="d-flex">
-              <button class="btn btn-outline-danger" type="submit">Login</button>
+                <a href="../pages/login.html" class="btn btn-outline-danger">Login</a>
             </form>
           </div>
         </div>
